# TZComet

./: .gitignore  .ocamlformat  LICENSE  README.md  VERSION  index.html  main-client.js  main.bc.js  michelson_bytes.ml  please.sh
.github/workflows/: main.yml
data/: metadata_example0.json
src/client/: .ipfs_gateways.ml.~undo-tree~  .ocamlformat  async_work.ml  b58_hashes.ml  bootstrap_css.ml  contract_metadata.ml  dune  errors_html.ml  gui.ml  import.ml  ipfs_gateways.ml  main.ml  message_html.ml  meta_html.ml  michelson.ml  michelson_bytes.ml  network.ml  query_nodes.ml  settings_page.ml  state.ml  text_editor.ml  tezos_html.ml  tezos_nodes.ml  token_viewer.ml  tzcomet_jsonm.ml  tzcomet_jsonm.mli
src/deploy-examples/: .ocamlformat  dune  main.ml
src/gen-web/: dune  main.ml
staging/: VERSION  index.html  main-client.js
