(executable
  (name main)
  (modes js)
  (preprocess (pps js_of_ocaml-ppx))
  (libraries zarith_stubs_js fmt base js_of_ocaml-tyxml js_of_ocaml-lwt re.posix
             tezos-contract-metadata)
  )

(rule
  (targets index.html)
  (deps main.bc.js loading.gif)
  (action
    (with-stdout-to index.html
      (progn
       (echo "<html><head>
    <meta charset=\"utf-8\">
    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">
    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">
</head><body><div id=\"attach-ui\"><h2>Loading Comevitz …</h2><img src=\"loading.gif\"/><br/><br/>See also <a href=\"https://github.com/smondet/comevitz\">https://github.com/smondet/comevitz</a></div><script src=\"main.bc.js\"></script></body></html>")
       ))))