(executable
  (name main)
  (modes js)
  (js_of_ocaml (flags --no-inline))
  (preprocess (pps js_of_ocaml-ppx))
  (libraries zarith_stubs_js fmt base js_of_ocaml-lwt re.posix
             tezos-contract-metadata digestif.ocaml
             ;; tezos-crypto → does not work in JS
             base58
             lwd tyxml-lwd
             )
  )
